Some more changes that wanted to make to the project. To make it more fun to play.

--- a/PotteridisProject.vcxproj.filters
+++ b/PotteridisProject.vcxproj.filters
@@ -59,6 +59,7 @@
   </ItemGroup>
   <ItemGroup>
     <Text Include="map.txt" />
+    <Text Include="map2.txt" />
   </ItemGroup>
   <ItemGroup>
     <None Include="pdcurses.dll" />
