--- a/PotteridisProject.vcxproj
+++ b/PotteridisProject.vcxproj
@@ -157,6 +157,7 @@
   </ItemGroup>
   <ItemGroup>
     <Text Include="map.txt" />
+    <Text Include="map2.txt" />
   </ItemGroup>
   <ItemGroup>
     <None Include="pdcurses.dll" />
